--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.282.0",
-    "@azure/ai-language-text": "next",
+    "@azure/ai-language-text": "1.1.0",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
