--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -38,7 +38,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
-            cat <<EOF > .env SPEECH_KEY=${{ secrets.SPEECH_KEY }}
+            cat <<EOF > .env
+SPEECH_KEY=${{ secrets.SPEECH_KEY }}
 SPEECH_REGION=${{ secrets.SPEECH_REGION }}
 MONGO_URI=${{ secrets.MONGO_URI }}
 S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}
@@ -47,6 +48,5 @@ S3_REGION=${{ secrets.S3_REGION }}
 S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}
 EOF
 
-            docker compose pull
-            docker compose up -d
-
+  docker compose pull
+  docker compose up -d
