--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -31,6 +31,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2  # <--- This is what you're missing!
       - name: Test SSH connection
         uses: appleboy/ssh-action@master
         with:
